<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/outline_home_black_24"
        android:orderInCategory="1"
        android:title="@string/action_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_bookmarks"
        android:icon="@drawable/outline_bookmarks_black_24"
        android:orderInCategory="2"
        android:title="@string/action_bookmarks"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_subscribe"
        android:icon="@drawable/outline_subscriptions_black_24"
        android:orderInCategory="3"
        android:title="@string/action_subscribe"
        app:showAsAction="always" />

</menu>