<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WoodsFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/under_construction"
        android:layout_centerInParent="true"
        android:fontFamily="@font/interstate_black"
        android:text="@string/coming_soon"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/under_construction"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/construction_image"
        android:src="@drawable/outline_construction_black_48" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/under_construction"
        android:layout_centerInParent="true"
        android:fontFamily="@font/interstate_black"
        android:text="@string/under_construction"
        android:textColor="@color/black"
        android:textSize="20sp" />


</RelativeLayout>