<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubscriptionFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:background="@color/yellow">

        <ImageView
            android:id="@+id/email_image_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/outline_email_black_48" />

        <TextView
            android:id="@+id/intro_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_image_view"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:fontFamily="@font/nunito_sans_extra_bold"
            android:text="@string/subscription_intro_one"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/intro_two_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/intro_text_view"
            android:layout_margin="10dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/subscription_intro_two"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/name_info_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/intro_two_text_view"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:src="@drawable/outline_person_black_36" />

            <EditText
                android:id="@+id/edit_text_enter_name"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_rounded_corners"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_name">

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_info_linear_layout"
            android:layout_marginStart="35dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:src="@drawable/outline_alternate_email_black_36" />

            <EditText
                android:id="@+id/edit_text_enter_email"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_rounded_corners"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_email">

                <requestFocus />
            </EditText>

        </LinearLayout>

        <Button
            android:id="@+id/subscribe_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_info"
            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"
            android:background="@drawable/subscribe_rounded_corners"
            android:fontFamily="@font/interstate_black"
            android:text="@string/subscribe_button"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/subscription_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subscribe_button"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:textAlignment="center"
            android:textColor="@color/black" />

    </RelativeLayout>

</FrameLayout>